src/objects/Plano_de_acao__c.object
<CustomObject>
    <fields>
        <fullName>Acoes_Atrasadas__c</fullName>
        <label>Ações Atrasadas</label>
        <summaryFilterItems>
            <field>Item_do_Plano__c.Status__c</field>
            <operation>equals</operation>
            <value>Atrasado</value>
        </summaryFilterItems>
        <summaryForeignKey>Item_do_Plano__c.Plano_de_acao__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Acoes_em_execucao__c</fullName>
        <label>Ações Em Execução</label>
        <summaryFilterItems>
            <field>Item_do_Plano__c.Status__c</field>
            <operation>equals</operation>
            <value>Execução</value>
        </summaryFilterItems>
        <summaryForeignKey>Item_do_Plano__c.Plano_de_acao__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Acoes_finalizadas__c</fullName>
        <label>Ações Finalizadas</label>
        <summaryFilterItems>
            <field>Item_do_Plano__c.Status__c</field>
            <operation>equals</operation>
            <value>Finalizado</value>
        </summaryFilterItems>
        <summaryForeignKey>Item_do_Plano__c.Plano_de_acao__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Projeto_Renovacao__c</fullName>
        <label>Projeto Renovação</label>
        <referenceTo>Projeto_Renova_o__c</referenceTo>
        <relationshipLabel>Planos de Ação</relationshipLabel>
        <relationshipName>Planos_de_Acao</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status_do_Plano_de_Acao__c</fullName>
        <formula>Acoes_finalizadas__c / Total_de_Acoes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status do Plano de Ação</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_de_Acoes__c</fullName>
        <label>Total de Ações</label>
        <summaryForeignKey>Item_do_Plano__c.Plano_de_acao__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Plano de Ação</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <label>Nome de Plano de Ação</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planos de Ação</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>